adjust to domain

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>matey-web</title>
+    <title>Ekspresso</title>
   </head>
   <body>
     <noscript>
